--- a/mail.css
+++ b/mail.css
@@ -1,5 +1,39 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+}
+.hero {
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+    url("media/background.png");
+  background-size: cover;
+  background-position: center;
+  color: #fff;
+  padding: 10px 10%;
+}
+.hero h3 {
+  margin-top: 15%;
+  font-weight: 400;
+  font-size: 30px;
+}
+.hero p {
+  margin: 10px 0 50px;
+}
+form {
+  background: #fff;
+  display: flex;
+  width: fit-content;
+}
+form input {
+  border: 0;
+  outline: none;
+  padding: 10px 20px;
+  height: 70px;
+  font-weight: 400;
+  font-size: 16px;
 }
