--- a/mail.css
+++ b/mail.css
@@ -37,3 +37,15 @@ form input {
   font-weight: 400;
   font-size: 16px;
 }
+form button{
+  background: #61b752;
+  border: none;
+  outline: none;
+  height: 70px;
+  width: 100px;
+  cursor: pointer;
+}span{
+  color: #61b752;
+  margin-top: 10px;
+  display: block;
+}
